--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
   display: inline-block;
 }
 .logo {
-  margin-right: 63%;
+  width:190px;
+  height: 35px;
   background: url(img/logo.svg);
 }
 .header {
