--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .logo {
   width:190px;
   height: 35px;
-  background: url(img/logo.svg);
+  background: url('img/logo.svg');
 }
 .header {
   padding: 40px 0;
