--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,16 @@ body {
   display: inline-block;
 }
 .logo {
-  font-family: pt_serif, arial, helvetica, sans-serif;
+  /*font-family: pt_serif, arial, helvetica, sans-serif;
   font-weight: bold;
   font-size:24px;
-  line-height: 31px;
+  line-height: 31px;*/
   width:190px;
   height: 35px;
   background: url('img/logo.svg');
 }
 .header {
+  font-family: pt_serifbold;
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
