--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
   background: url('img/logo.svg');
 }
 .header {
-  font-family: pt_serifbold;
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
@@ -33,4 +32,7 @@ body {
 }
 .menu__item:last-child {
   padding-right: 0;
+}
+.main-content__title {
+  font-family: pt_serifbold;
 }
