--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 .menu__item {
   padding: 0 13px;
-
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 }
 .menu__item:last-child {
   padding-right: 0;
