--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,12 @@ body {
 .menu__item:last-child {
   margin-right: 0;
 }
+.main-content {
+  margin-right: 714px;
+}
 .main-content__title {
-  font-family: pt_serifbold;
+  font: 700 50px/66px pt_serifbold, arial, helvetica, sans-serif;
+
 }
 .menu__item::after {
   position: absolute;
