--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .menu {
   display: flex;
@@ -33,12 +34,20 @@ body {
 .menu__item:last-child {
   margin-right: 0;
 }
-.main-content {
-  margin-right: 714px;
+.main {
+  padding: 0 63% 100px 0;
+  background: top right no-repeat url('img/mainImg.svg');
 }
-.main-content__title {
+.main__title {
   font: 700 50px/66px pt_serifbold, arial, helvetica, sans-serif;
-
+  margin:0 0 40px 0;
+}
+.main__subtitle {
+  margin: 0 0 41px 0;
+  font: 18px/21px roboto, arial, helvetica, sans-serif;
+}
+.main__button {
+  font: 14px/16px roboto, arial, helvetica, sans-serif;
 }
 .menu__item::after {
   position: absolute;
