--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,25 @@ body {
   font: 700 50px/66px pt_serifbold, arial, helvetica, sans-serif;
   margin:0 0 40px 0;
 }
+.main__title-text_highlight {
+  background: #ECF3FF;
+}
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 18px/21px roboto, arial, helvetica, sans-serif;
+  font: 18px/21px robotomedium, arial, helvetica, sans-serif;
 }
 .main__button {
-  font: 14px/16px roboto, arial, helvetica, sans-serif;
+  display: inline-block;
+  font: 14px/16px robotomedium, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+.main__button:hover {
+  opacity: .5;
 }
 .menu__item::after {
   position: absolute;
