--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 246px;
 }
 .menu {
   display: flex;
@@ -39,19 +39,19 @@ body {
   background: top right no-repeat url('img/mainImg.svg');
 }
 .main__title {
-  font: 700 50px/66px pt_serifbold, arial, helvetica, sans-serif;
+  font: 700 66px/87px pt_serifbold, arial, helvetica, sans-serif;
   margin:0 0 40px 0;
 }
 .main__title-text_highlight {
-  background: #ECF3FF;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 15%, #ECF3FF 15%);
 }
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 18px/21px robotomedium, arial, helvetica, sans-serif;
+  font: 22px/25px robotomedium, arial, helvetica, sans-serif;
 }
 .main__button {
   display: inline-block;
-  font: 14px/16px robotomedium, arial, helvetica, sans-serif;
+  font: 18px/21px robotomedium, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
   padding: 14px 16px;
