--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
   margin-right: 0;
 }
 .main {
-  padding: 0 67% 100px 0;
+  padding: 0 63% 100px 0;
   background: top right no-repeat url('img/mainImg.svg');
 }
 .main__title {
@@ -50,6 +50,7 @@ body {
 .main__subtitle {
   margin: 0 0 41px 0;
   font: 22px/25px robotomedium, arial, helvetica, sans-serif;
+  padding-right: 100px;
 }
 .main__button {
   display: inline-block;
