--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 }
 .menu__item {
   position: relative;
-  margin-right: 26px;
+  margin-right: 28px;
   font: 500 18px/21px robotomedium, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
@@ -36,8 +36,11 @@ body {
 .menu__item:last-child {
   margin-right: 0;
 }
+menu__item:first-child{
+  margin-right: 29px;
+}
 .main {
-  padding: 80px 63% 200px 0;
+  padding: 80px 63% 269px 0;
   background: top right no-repeat url('img/mainImg.svg');
   background-size: 770px;
 }
@@ -83,4 +86,12 @@ body {
 .menu__item:hover::after, .menu__item_active::after {
   opacity: 1;
   width: 100%;
+}
+.dots
+{
+  position: absolute;
+  margin-left: 944px;
+  width:32px;
+  height: 8px;
+  background: no-repeat url('img/3dots.svg')
 }
