--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 .menu__item:last-child {
   margin-right: 0;
 }
-menu__item:first-child{
+.menu__item:first-child{
   margin-right: 29px;
 }
 .main {
@@ -53,15 +53,15 @@ menu__item:first-child{
 }
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 22px/25px robotomedium, arial, helvetica, sans-serif;
+  font: 22px/25px roboto, arial, helvetica, sans-serif;
   padding-right: 100px;
 }
 .main__button {
   display: inline-block;
-  font: 18px/21px robotomedium, arial, helvetica, sans-serif;
+  font: 18px/21px roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
-  padding: 18px 27px;
+  padding: 18px 36px 19px 21px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
