--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,7 @@ body {
 }
 .wrapper {
   margin: auto;
-  padding-left: 196px;
-  padding-right: 200px;
-  /*width: 78%;*/
+  width: 79.5%;
 }
 .logo, .menu {
   display: inline-block;
@@ -95,4 +93,36 @@ body {
   width:32px;
   height: 8px;
   background: no-repeat url('img/3dots.svg')
+}
+
+@media (max-width:768px) {
+.menu {
+  display: none;
+  }
+.header {
+  margin-bottom: 28px;
+}
+.main {
+  text-align: center;
+  padding: 74% 0 0;
+  background-size: 74%;
+  background-position: top center;
+}
+.main__title {
+  margin-bottom: 44px;
+  font: 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+}
+.main__subtitle {
+  margin-bottom: 25px;
+  font: 500 16px/19px robotomedium, arial, helvetica, sans-serif;
+  padding: 0;
+}
+.main__button {
+  font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
+}
+.logo {
+  width:36px;
+  height: 35px;
+  background: url('img/logo.svg');
+}
 }
