--- a/styles.css
+++ b/styles.css
@@ -119,25 +119,27 @@ body {
 }
 .header {
   padding:24px 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .main {
   text-align: center;
-  padding: 74% 0 0;
-  background-size: 74%;
+  padding: 80% 0 0;
+  background-size: 85%;
   background-position: top center;
 }
 .main__title {
-  margin-bottom: 44px;
+  padding-left:6px;
+  margin-bottom: 34px;
   font: 30px/39px pt_serifbold, arial, helvetica, sans-serif;
 }
 .main__subtitle {
-  margin-bottom: 25px;
+  margin-bottom: 27px;
   font: 500 16px/19px robotomedium, arial, helvetica, sans-serif;
-  padding-left: 35px;
+  padding-left: 39px;
   padding-right: 35px;
 }
 .main__button {
+  padding: 14px 26px 14px 16px;
   font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
 }
 .logo {
@@ -154,22 +156,33 @@ body {
    width: 91%;
  }
  .header {
-   margin-bottom: 100px;
+   margin-bottom: 80px;
  }
+ .menu__item {
+  margin-right: 27px;
+}
+ .menu__item:first-child {
+ margin-right: 23px;
+}
+.menu__item::after {
+  margin-top: 2px;
+  padding-left: 2px;
+}
  .main {
-   padding: 0 58% 120px 0;
-   background-size: 50%;
+   padding: 18px 58% 129px 0;
+   background-size: 55%;
  }
  .main__title {
    margin-bottom: 40px;
    font: 50px/66px pt_serifbold, arial, helvetica, sans-serif;
  }
  .main__subtitle {
-   margin-bottom: 41px;
+   margin-bottom: 39px;
    font: 500 18px/21px robotomedium, arial, helvetica, sans-serif;
    padding: 0;
  }
  .main__button {
+   padding: 14px 26px 14px 16px;
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
  }
  .dots {
@@ -185,14 +198,27 @@ body {
    width: 930px;
  }
  .header {
-   margin-bottom: 100px;
+   margin-bottom: 80px;
  }
+ .menu__item {
+    margin-right: 27px;
+  }
+ .menu__item::after {
+   margin-top: 2px;
+   padding-left: 1px;
+ }
+ .menu__item:last-child {
+  padding-right: 3px;
+  }
+ .menu__item:first-child {
+  margin-right: 24px;
+  }
  .main {
-   padding: 0 56% 120px 0;
+   padding: 18px 58% 129px 0;
    background-size: 514px;
  }
  .main__title {
-   margin-bottom: 40px;
+   margin-bottom: 39px;
    font: 50px/66px pt_serifbold, arial, helvetica, sans-serif;
  }
  .main__subtitle {
@@ -201,6 +227,7 @@ body {
    padding: 0;
  }
  .main__button {
+   padding: 14px 26px 14px 16px;
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
  }
  .dots {
