--- a/styles.css
+++ b/styles.css
@@ -120,12 +120,13 @@ body {
   left: 0%;
   top: 0%;
   padding-top: 186px;
+  padding-left: 13px;
   background-color: white;
 }
 .menu__close {
   display: block;
   position: fixed;
-  margin-left: 308px;
+  margin-left: 315px;
   margin-top: -156px;
   width: 20px;
   height: 20px;
