Штрихи адаптивной верстки

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ body {
 .menu__icon {
   display: none;
 }
+#checkbox {
+  display: none;
+}
 .menu__item {
   position: relative;
   margin-right: 28px;
@@ -43,7 +46,7 @@ body {
 .main {
   padding: 80px 63% 252px 0;
   background: top right no-repeat url('img/mainImg.svg');
-  background-size: 770px;
+  background-size: 50.5%;
 }
 .main__title {
   font: 700 66px/87px pt_serifbold, arial, helvetica, sans-serif;
@@ -53,7 +56,7 @@ body {
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 15%, #ECF3FF 15%);
 }
 .main__subtitle {
-  margin: 0 0 41px 0;
+  margin: 0 -150px 41px 0;
   font: 22px/25px roboto, arial, helvetica, sans-serif;
   padding-right: 100px;
 }
@@ -111,7 +114,9 @@ body {
 .menu {
   display: none;
   }
-.menu:target {
+
+
+#checkbox:checked ~ .menu {
   display: block;
   position: absolute;
   text-align: center;
@@ -122,6 +127,20 @@ body {
   padding-top: 186px;
   padding-left: 13px;
   background-color: white;
+}
+
+#checkbox:checked ~ .menu__icon {
+ display: block;
+ position: fixed;
+ padding-left: 81.3%;
+ margin-top: -156px;
+ width: 20px;
+ height: 20px;
+ background: no-repeat right url('img/closing_menu_window.svg');
+}
+.menu__item:hover::after, .menu__item_active::after {
+  opacity: 0;
+  width: 100%;
 }
 .menu__close {
   display: block;
@@ -156,22 +175,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .menu__icon {
   display: inline-flex;
+  position: relative;
   justify-content: flex-end;
   margin-top: 8px;
+  margin-bottom: 10px;
   width:25px;
   height: 18px;
   background: no-repeat url('img/menu_icon.svg');
   transition: opacity .4s;
-  border: 0px;
 }
 .menu__icon:hover {
   opacity: 0;
-}
-
-.menu_icon:active {
-
 }
 .header {
   padding:24px 0;
@@ -190,6 +207,7 @@ body {
 }
 .main__subtitle {
   margin-bottom: 27px;
+  margin-right: 0;
   font: 500 16px/19px robotomedium, arial, helvetica, sans-serif;
   padding-left: 39px;
   padding-right: 35px;
@@ -234,6 +252,7 @@ body {
  }
  .main__subtitle {
    margin-bottom: 39px;
+   margin-right: -100px;
    font: 500 18px/21px robotomedium, arial, helvetica, sans-serif;
    padding: 0;
  }
@@ -271,7 +290,7 @@ body {
   }
  .main {
    padding: 18px 58% 129px 0;
-   background-size: 514px;
+   background-size: 55.1%;
  }
  .main__title {
    margin-bottom: 39px;
@@ -279,6 +298,7 @@ body {
  }
  .main__subtitle {
    margin-bottom: 41px;
+   margin-right: 10px;
    font: 500 18px/21px robotomedium, arial, helvetica, sans-serif;
    padding: 0;
  }
