--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+
+@keyframes  button_animation {
+  from {
+    opacity: .6;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 body {
   margin: 0;
 }
@@ -69,6 +79,9 @@ body {
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
+  animation-duration: 2s;
+  animation: button_animation 2.5s;
+  animation-iteration-count: infinite;
 }
 .main__button:hover {
   opacity: .5;
