--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
 }
 .main__title {
   font: 700 66px/87px pt_serifbold, arial, helvetica, sans-serif;
-  margin:0 0 35px 0;
+  margin:0 0 40px 0;
 }
 .main__title-text_highlight {
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 15%, #ECF3FF 15%);
@@ -261,11 +261,11 @@ body {
    background-size: 55%;
  }
  .main__title {
-   margin-bottom: 40px;
+   margin-bottom: 37px;
    font: 50px/66px pt_serifbold, arial, helvetica, sans-serif;
  }
  .main__subtitle {
-   margin-bottom: 39px;
+   margin-bottom: 43px;
    margin-right: -100px;
    font: 500 18px/21px robotomedium, arial, helvetica, sans-serif;
    padding: 0;
@@ -275,12 +275,23 @@ body {
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
  }
  .dots {
-
+   margin-top: 18px;
  }
  .menu__item {
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
  }
 }
+
+@media (min-width:769px) and (max-width:900px) {
+  .main {
+    background-size: 46%;
+    background-position: right;
+    padding-bottom: 2px;
+  }
+  .dots {
+    margin-top: 110px;
+  }
+ }
 
 @media (min-width:1025px) and (max-width:1367px) {
  .wrapper {
@@ -321,7 +332,7 @@ body {
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
  }
  .dots {
-
+   margin-top: 17px;
  }
  .menu__item {
    font: 500 14px/16px robotomedium, arial, helvetica, sans-serif;
